--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "concurrently": "^5.2.0",
+    "glob-parent": "^6.0.1",
     "http-server": "^13.0.2",
     "live-server": "^1.2.1",
     "run-script-os": "^1.0.7"
