--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^6.0.8",
     "mongoose-unique-validator": "^2.0.3",
     "multer": "^1.4.3",
-    "nodemon": "^2.0.13"
+    "nodemon": "^2.0.14",
+    "update": "^0.7.4"
   }
 }
